NXP-27984: Cleanup / Format